--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
 <body style="margin: 0; overflow: hidden;">
   <div id="scoreOverlay">Score: <span id="score">0</span></div>
 
-  <a-scene embedded arjs cursor="rayOrigin: mouse">
-    <a-marker preset="hiro">
-      <!-- Falling object (apple) -->
-      <a-sphere id="apple" position="0 2 -1" color="red" radius="0.2"
-                animation="property: position; to: 0 0 -1; dur: 3000; easing: linear; loop: true"
-                class="clickable"></a-sphere>
-    </a-marker>
-
+  <!-- Scene with markerless AR (using camera) -->
+  <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
+    <!-- Camera entity -->
     <a-entity camera></a-entity>
+
+    <!-- Falling apple object -->
+    <a-sphere id="apple" position="0 2 -3" color="red" radius="0.3"
+              animation="property: position; to: 0 -1 -3; dur: 3000; easing: linear; loop: true"
+              class="clickable"></a-sphere>
   </a-scene>
 
   <script>
@@ -37,7 +37,7 @@
       score++;
       document.querySelector('#score').textContent = score;
       // Reset apple position to top
-      this.setAttribute('position', {x: 0, y: 2, z: -1});
+      this.setAttribute('position', {x: 0, y: 2, z: -3});
     });
   </script>
 </body>
