--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
   <script src="https://cdn.rawgit.com/jeromeetienne/ar.js/2.2.1/aframe/build/aframe-ar.js"></script>
+  <title>AR Game with QR</title>
   <style>
     #scoreOverlay {
       position: fixed;
@@ -20,24 +23,37 @@
 <body style="margin: 0; overflow: hidden;">
   <div id="scoreOverlay">Score: <span id="score">0</span></div>
 
-  <!-- Scene with markerless AR (using camera) -->
   <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
-    <!-- Camera entity -->
+    <!-- Marker with QR code -->
+    <a-marker type="barcode" value="YOUR_QR_CODE_VALUE" id="qrMarker">
+      <!-- Falling object (apple) -->
+      <a-sphere id="apple" position="0 2 -3" color="red" radius="0.3"
+                animation="property: position; to: 0 -1 -3; dur: 3000; easing: linear; loop: true"
+                class="clickable"></a-sphere>
+    </a-marker>
     <a-entity camera></a-entity>
-
-    <!-- Falling apple object -->
-    <a-sphere id="apple" position="0 2 -3" color="red" radius="0.3"
-              animation="property: position; to: 0 -1 -3; dur: 3000; easing: linear; loop: true"
-              class="clickable"></a-sphere>
   </a-scene>
 
   <script>
     let score = 0;
+
+    // Event listener for apple click
     document.querySelector('#apple').addEventListener('click', function () {
       score++;
       document.querySelector('#score').textContent = score;
-      // Reset apple position to top
-      this.setAttribute('position', {x: 0, y: 2, z: -3});
+      this.setAttribute('position', {x: 0, y: 2, z: -3}); // Reset apple position
+    });
+
+    // Check if QR code is detected
+    const qrMarker = document.getElementById('qrMarker');
+    qrMarker.addEventListener('markerFound', function () {
+      console.log("QR code detected. Game starts!");
+      // Any actions you want when QR code is detected, e.g., start animations
+    });
+
+    qrMarker.addEventListener('markerLost', function () {
+      console.log("QR code lost. Game stopped!");
+      // Any actions you want when QR code is lost, e.g., stop animations or reset
     });
   </script>
 </body>
