--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
     <!-- Marker with QR code -->
-    <a-marker type="barcode" value="YOUR_QR_CODE_VALUE" id="qrMarker">
+    <a-marker type="barcode" value="https://qrco.de/bfw2fa" id="qrMarker">
       <!-- Falling object (apple) -->
       <a-sphere id="apple" position="0 2 -3" color="red" radius="0.3"
                 animation="property: position; to: 0 -1 -3; dur: 3000; easing: linear; loop: true"
